# openclaw-3agent-sidecar

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
deploy/: README.md  aws-direct-cutover-impact-and-runbook.md  aws-role-specific-agent-reviewer-only.env.example  aws-role-specific-agent-staging-rollout-checklist.md  aws-staging-discovery.md  aws-staging-execution-checklist.md  aws-staging-rollout-plan.md  aws-staging-safe-deploy.md  aws-staging.env.example
docs/: adapter-contract.md  ai-agent-handoff.md  architecture.md  brand-positioning.md  competitor-analysis-edict.md  migration-notes.md  new-agent-start-prompt.md  operations-runbook.md  product-requirements-roadmap.md  project-introduction.md
sidecar/: __init__.py  __main__.py  api.py  briefing.py  config.py  consistency.py  contracts.py  detail_view.py  events.py  feishu_projection.py  http_service.py  metrics.py  models.py  remote_validate.py  rollout_policy.py  runtime_mode.py  service_runner.py  smoke_demo.py  state_machine.py  storage.py  time_utils.py
tests/: test_agent_health.py  test_agent_invoke_adapter.py  test_config.py  test_dispatch_retry_strategy.py  test_dispatcher.py  test_end_to_end_minimal_loop.py  test_ingress_adapter.py  test_invoke_result_closedloop.py  test_lifecycle.py  test_openclaw_cli_runtime_bridge.py  test_openclaw_runtime_integration.py  test_recovery.py  test_remote_validate.py  test_restart_consistency.py  test_result_adapter.py  test_result_concurrency.py  test_scheduler.py  test_service_runner_cli.py  test_service_runner_health.py  (+7 more)
(+38 files in other folders)
