[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-3agent-sidecar"
version = "0.1.0"
description = "3-agent orchestration sidecar for official OpenClaw"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
openclaw-sidecar = "sidecar.__main__:main"
openclaw-sidecar-smoke = "sidecar.smoke_demo:main"
openclaw-sidecar-remote-validate = "sidecar.remote_validate:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sidecar*"]

[tool.setuptools.package-data]
sidecar = ["templates/*.html", "roles/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
